added pure email search

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,19 +1,23 @@
 import os
 import pandas as pd
 import yaml
+from environs import Env
 
-configfile: 'demo/config/data.yaml'
+env = Env()
+env.read_env()
 
+CONFIG_PATH=env("CONFIG_PATH", "demo/config")
 OUTDIR='workflow/results'
 
 ORCID_RESEARCH_DATA = f'{OUTDIR}/orcid_research_data'
 
 PURE_PERSON_DATA = f'{OUTDIR}/person_data'
-PURE_ORG_PERSON = f'{OUTDIR}/org_person'
 PURE_PERSON_METADATA = f'{OUTDIR}/person_metadata'
 PURE_RESEARCH_DATA = f'{OUTDIR}/research_data'
 PURE_RESEARCH_METADATA = f'{OUTDIR}/research_metadata'
 PURE_DONE = f'{OUTDIR}/done'
+
+configfile: f'{CONFIG_PATH}/data.yaml'
 
 rule orcid:
     input: config['orcid_data']
@@ -25,22 +29,22 @@ rule orcid:
 
 rule pure_org_person:
     input: config['pure_org_url']
-    output: PURE_ORG_PERSON
+    output: PURE_PERSON_DATA
     shell: 
         """
         python -m workflow.scripts.get_pure_people_from_org --input {input} --output {output} --top 1000
         """ 
 
-#rule find_pure_person:
-#    input: config['emails']
-#    output: PURE_PERSON_DATA
-#    shell: 
-#        """
-#        python -m workflow.scripts.find_pure_people --input {input} --output {output} --top 1000
-#        """
+rule find_pure_person:
+    input: config['emails']
+    output: PURE_PERSON_DATA
+    shell: 
+        """
+        python -m workflow.scripts.find_pure_people --input {input} --output {output} --top 10
+        """
 
 rule get_pure_person_data:
-    input: PURE_ORG_PERSON
+    input: PURE_PERSON_DATA
     output: a=PURE_PERSON_METADATA,b=PURE_RESEARCH_METADATA
     shell: 
         """
